--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 10:05:07 2018</p>
+         Last Run: Tue Nov 20 11:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>71</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
@@ -173,7 +173,7 @@
                "data":[
                  "57",
                  "63",
-                 "65"
+                 "66"
                ]
              },
              {
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "72",
-                 "71",
+                 "70",
                  "69"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 10:05:07 2018</p>
+         Last Run: Tue Nov 20 11:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>20</td>
+                        <td>19</td>
                         <td>63</td>
                         <td>0</td>
                         <td>8</td>
@@ -258,8 +258,8 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>4</td>
                         <td>57</td>
                         <td>0</td>
@@ -272,24 +272,24 @@
                         <td>Overcast</td>
                         <td>0</td>
                         <td>-2</td>
-                        <td>4</td>
-                        <td>54</td>
+                        <td>5</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>N</td>
-                        <td>84</td>
+                        <td>NNE</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>0</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>4</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>E</td>
-                        <td>68</td>
+                        <td>6</td>
+                        <td>ESE</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -318,9 +318,9 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-4",
+                 "-3",
                  "-2",
-                 "-3"
+                 "-2"
                ]
              },
              {
@@ -331,7 +331,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "0",
                  "0",
                  "0"
                ]
@@ -391,9 +391,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "20",
+                 "19",
                  "4",
-                 "4",
+                 "5",
                  "4"
                ]
              },
@@ -405,8 +405,8 @@
                "data":[
                  "63",
                  "57",
-                 "54",
-                 "56"
+                 "55",
+                 "55"
                ]
              },
              {
@@ -417,8 +417,8 @@
                "data":[
                  "92",
                  "91",
-                 "84",
-                 "68"
+                 "85",
+                 "69"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 10:05:07 2018</p>
+         Last Run: Tue Nov 20 11:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -482,7 +482,7 @@
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>60</td>
                         <td>1</td>
                         <td>8</td>
@@ -494,7 +494,7 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>4</td>
+                        <td>2</td>
                         <td>55</td>
                         <td>1</td>
                         <td>8</td>
@@ -505,11 +505,11 @@
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-1</td>
-                        <td>3</td>
+                        <td>-2</td>
+                        <td>2</td>
                         <td>52</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WNW</td>
                         <td>44</td>
                      </tr>
@@ -540,7 +540,7 @@
                "data":[
                  "-4",
                  "-2",
-                 "-1"
+                 "-2"
                ]
              },
              {
@@ -609,9 +609,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "4",
-                 "3"
+                 "2",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 10:05:07 2018</p>
+         Last Run: Tue Nov 20 11:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -695,38 +695,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>49</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>3</td>
-                        <td>68</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>4</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>46</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>3</td>
-                        <td>68</td>
+                        <td>4</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>45</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,8 +753,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-6",
+                 "-7",
+                 "-7",
                  "-6"
                ]
              },
@@ -765,8 +765,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
-                 "-2",
+                 "-3",
+                 "-3",
                  "-2"
                ]
              }
@@ -825,8 +825,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "3",
-                 "3"
+                 "4",
+                 "4"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "68",
-                 "68"
+                 "73",
+                 "73",
+                 "74"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "46",
-                 "45"
+                 "32",
+                 "35",
+                 "39"
                ]
              }
            ]
