--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 11:05:07 2018</p>
+         Last Run: Tue Nov 20 12:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>72</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>1</td>
-                        <td>63</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSW</td>
-                        <td>70</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
                         <td>1</td>
-                        <td>66</td>
-                        <td>0</td>
-                        <td>14</td>
-                        <td>SSW</td>
+                        <td>-3</td>
+                        <td>1</td>
                         <td>69</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>SSW</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-1",
-                 "-1",
-                 "-2"
+                 "-2",
+                 "-3"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "3",
-                 "3",
-                 "2"
+                 "2",
+                 "1"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "63",
-                 "66"
+                 "59",
+                 "65",
+                 "69"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "72",
-                 "70",
-                 "69"
+                 "67",
+                 "67",
+                 "68"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 11:05:07 2018</p>
+         Last Run: Tue Nov 20 12:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -245,51 +245,51 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>19</td>
-                        <td>63</td>
-                        <td>0</td>
+                        <td>6</td>
+                        <td>65</td>
+                        <td>1</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>92</td>
+                        <td>NW</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Partly Cloudy</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>3</td>
+                        <td>59</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>55</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>3</td>
+                        <td>55</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SSE</td>
+                        <td>50</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
                         <td>57</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>91</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Overcast</td>
-                        <td>0</td>
-                        <td>-2</td>
-                        <td>5</td>
-                        <td>55</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>NNE</td>
-                        <td>85</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-2</td>
-                        <td>4</td>
-                        <td>55</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>ESE</td>
-                        <td>69</td>
+                        <td>SE</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -318,9 +318,9 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
+                 "-4",
                  "-3",
-                 "-2",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -331,7 +331,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "0",
+                 "-1",
                  "0",
                  "0"
                ]
@@ -391,9 +391,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "19",
-                 "4",
-                 "5",
+                 "6",
+                 "3",
+                 "3",
                  "4"
                ]
              },
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "57",
+                 "65",
+                 "59",
                  "55",
-                 "55"
+                 "57"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "92",
-                 "91",
-                 "85",
-                 "69"
+                 "57",
+                 "55",
+                 "50",
+                 "38"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 11:05:07 2018</p>
+         Last Run: Tue Nov 20 12:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,23 +483,23 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>60</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>44</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>2</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>44</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -507,7 +507,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
@@ -539,7 +539,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-2",
+                 "-3",
                  "-2"
                ]
              },
@@ -551,7 +551,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-1",
-                 "1",
+                 "0",
                  "1"
                ]
              }
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
-                 "55",
-                 "52"
+                 "62",
+                 "56",
+                 "54"
                ]
              },
              {
@@ -631,8 +631,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "44",
+                 "46",
+                 "45",
                  "44"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 11:05:07 2018</p>
+         Last Run: Tue Nov 20 12:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,12 +697,12 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>3</td>
-                        <td>73</td>
+                        <td>4</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>32</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>35</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>39</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -824,7 +824,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
+                 "4",
                  "4",
                  "4"
                ]
@@ -835,8 +835,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "73",
+                 "74",
+                 "74",
                  "74"
                ]
              },
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "32",
-                 "35",
-                 "39"
+                 "33",
+                 "36",
+                 "40"
                ]
              }
            ]
