--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 12:05:06 2018</p>
+         Last Run: Tue Nov 20 13:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -36,9 +36,9 @@
                         <td>1</td>
                         <td>59</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSW</td>
-                        <td>67</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -56,11 +56,11 @@
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>1</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>1</td>
                         <td>69</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSW</td>
                         <td>68</td>
                      </tr>
@@ -91,7 +91,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-3"
+                 "-2"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "67",
+                 "66",
                  "67",
                  "68"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 12:05:06 2018</p>
+         Last Run: Tue Nov 20 13:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -249,10 +249,10 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>6</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>57</td>
                      </tr>
                      <tr>
@@ -260,12 +260,12 @@
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>3</td>
-                        <td>59</td>
+                        <td>4</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>55</td>
+                        <td>SSW</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -392,7 +392,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "3",
+                 "4",
                  "3",
                  "4"
                ]
@@ -403,9 +403,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "59",
-                 "55",
+                 "66",
+                 "60",
+                 "56",
                  "57"
                ]
              },
@@ -416,8 +416,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "57",
-                 "55",
-                 "50",
+                 "57",
+                 "51",
                  "38"
                ]
              }
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 12:05:06 2018</p>
+         Last Run: Tue Nov 20 13:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -480,10 +480,10 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-5</td>
                         <td>2</td>
-                        <td>62</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -492,10 +492,10 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
@@ -504,10 +504,10 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>2</td>
-                        <td>54</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-5",
                  "-4",
-                 "-3",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-2",
                  "-1",
-                 "0",
-                 "1"
+                 "0"
                ]
              }
            ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "56",
-                 "54"
+                 "65",
+                 "60",
+                 "56"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 12:05:06 2018</p>
+         Last Run: Tue Nov 20 13:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -695,22 +695,22 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
+                        <td>-4</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
                         <td>33</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-4</td>
+                        <td>-8</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -719,14 +719,14 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,8 +754,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-7",
-                 "-6"
+                 "-8",
+                 "-7"
                ]
              },
              {
@@ -765,9 +765,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
-                 "-3",
-                 "-2"
+                 "-4",
+                 "-4",
+                 "-3"
                ]
              }
            ]
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "74",
-                 "74"
+                 "76",
+                 "75",
+                 "75"
                ]
              },
              {
@@ -848,7 +848,7 @@
                "data":[
                  "33",
                  "36",
-                 "40"
+                 "41"
                ]
              }
            ]
